--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,18 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Nagy Zsolt</string>
-    <string name="nav_header_subtitle">zsolt023@gmail.com</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- navigation texts -->
+    <string name="personal_info">Személyes adatok</string>
+    <string name="professional_experience">Szakmai tapasztalatok</string>
+    <string name="education">Tanulmányok</string>
+    <string name="language_knowledge">Nyelvtudás</string>
+    <string name="professional_knowledge">Szakmai ismeretek</string>
+    <string name="hobbies">Hobbik</string>
+    <string name="personal_info_name">Teljes név:</string>
+    <string name="personal_info_email">Email:</string>
+    <string name="personal_info_phone">Telefonszám:</string>
+    <string name="personal_info_nationality">Állampolgárság:</string>
+    <string name="personal_info_born">Születési adatok:</string>
+    <string name="personal_info_hungarian">magyar</string>
 </resources>
